--- a/index.html
+++ b/index.html
@@ -7,59 +7,103 @@
   </head>
   <body>
                       <!--header-->
-    <img src="./resources/images/img-tea-cozy-logo.png"/>
+  <header>
+  <div class="logo">
+    <img src="./resources/images/img-tea-cozy-logo.png" class="logo"/>
     <nav>
       <a href="#mission">Mission</a>
       <a href="#featured-tea">Featured Tea</a>
       <a href="#locations">Locations</a>
     </nav>
+  </div>
+  </header>
                                   <!--main content-->
+  <div class="content">
                                   <!--mission-->
-    <img src="./resources/imgages/img-mission-background.png"/>
-    <h2>Our Mission</h2>
-    <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+  <div class="our-mission">
+    <div class="mission"><h2>Our Mission</h2>
+    <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4></div>
+  </div>
                                   <!--tea of the month-->
-    <h2>Tea of the Month</h2>
-    <h4>What's Steeping at The Tea Cozy</h4>
-      <img src="./resources/images/img-berryblitz.jpg"/>
-      <h4>Fall Berry Blitz Tea</h4>
-      <img src="./resources/images/img-spiced-rum.jpg"/>
-      <h4>Spiced Rum Tea</h4>
-      <img src="./resources/images/img-donut.jpg"/>
-      <h4>Seasonal Donuts</h4>
-      <img src="./resources/images/img-myrtle-ave.jpg"/>
-      <h4>Myrtle Ave Tea</h4>
-      <img src="./resources/images/img-bedford-bizarre.jpg"/>
-      <h4>Bedford Bizarre Tea</h4>
+  <div class="teas">
+    <h2 class="title">Tea of the Month</h2>
+    <h4 class="steeping">What's Steeping at The Tea Cozy</h4>
+    <div class="firstrowimg">
+      <img src="./resources/images/img-berryblitz.jpg" class="berry"/>
+      <img src="./resources/images/img-spiced-rum.jpg" class="rum"/>
+      <img src="./resources/images/img-donut.jpg" class="donut"/>
+    </div>
+    <div class="firstrownames">
+      <h4 class="berry">Fall Berry Blitz Tea</h4>
+      <h4 class="rum">Spiced Rum Tea</h4>
+      <h4 class="donut">Seasonal Donuts</h4>
+    </div>
+    <div class="secondrowimg">
+      <img src="./resources/images/img-myrtle-ave.jpg" class="myrtle"/>
+      <img src="./resources/images/img-bedford-bizarre.jpg" class="bizarre"/>
+    </div>
+    <div class="secondrownames">
+      <h4 class="myrtle">Myrtle Ave Tea</h4>
+      <h4 class="bizarre">Bedford Bizarre Tea</h4>
+    </div>
+  </div>
                                   <!--locations-->
-    <img src="./resources/images/img-locations-background.jpg"/>
-    <h2>Locations</h2>
+  <div class="locations">
+    <div class="title2"><h2>Locations</h2></div>
+    <div class="columns">
                                       <!--Column 1-->
-    <div class="column 1">
-      <div class="city">Downtown</div>
+    <div class="firstcolumn">
+      <br>
+      <div class="city"><strong>Downtown</strong></div>
+      <br>
+      <br>
       <div class="address">384 West 4th St</div>
+      <br>
+      <br>
       <div class="room">Suite 108</div>
+      <br>
+      <br>
       <div class="state">Portland, Maine</div>
+      <br>
     </div>
                                       <!--Column 2-->
-    <div class="column 2">
-      <div class="city">East Bayside</div>
+    <div class="secondcolumn">
+      <br>
+      <div class="city"><strong>East Bayside</strong></div>
+      <br>
+      <br>
       <div class="address">3433 Phisherman's Avenue</div>
+      <br>
+      <br>
       <div class="room">(Northwest Corner)</div>
+      <br>
+      <br>
       <div class="state">Portland, Maine</div>
     </div>
                                       <!--Column 3-->
-    <div class="column 3">
-      <div class="city">Oakdale</div>
+    <div class="thirdcolumn">
+      <br>
+      <div class="city"><strong>Oakdale</strong></div>
+      <br>
+      <br>
       <div class="address">515 Crescent Avenue</div>
+      <br>
+      <br>
       <div class="room">Second Floor</div>
+      <br>
+      <br>
       <div class="state">Portland, Maine</div>
     </div>
+  </div>
+</div>
                                  <!--contact info-->
-    <h2>The Tea Cozy</h2>
-    <h4>contact@theteacozy.com</h4>
-    <h4>917-555-8904</h4>
+  <div class="contact">
+    <div class="teacozy"><h2>The Tea Cozy</h2></div>
+    <div class="email"><h5>contact@theteacozy.com</h5>
+    <div class="phone"><h5>917-555-8904</h5></div>
+  </div>
+  </div>
                                  <!--footer-->
-    <h4>copyright The Tea Cozy 2017</h4>
+    <div class="footer"><h5>copyright The Tea Cozy 2017</h5></div>
   </body>
 </html>
