--- a/index.html
+++ b/index.html
@@ -9,29 +9,37 @@
                       <!--header-->
   <header>
   <div class="logo">
-    <img src="./resources/images/img-tea-cozy-logo.png" class="logo"/>
+    <img src="./resources/images/img-tea-cozy-logo.png" class="logo" alt="Tea Cozy Logo"/>
     <nav>
-      <a href="#mission">Mission</a>
-      <a href="#featured-tea">Featured Tea</a>
-      <a href="#locations">Locations</a>
+      <ul>
+        <li>
+          <a href="#mission">Mission</a>
+        </li>
+        <li>
+          <a href="#featured-tea">Featured Tea</a>
+        </li>
+        <li>
+          <a href="#locations">Locations</a>
+        </li>
+    </ul>
     </nav>
   </div>
   </header>
                                   <!--main content-->
   <div class="content">
                                   <!--mission-->
-  <div class="our-mission">
-    <div class="mission"><h2>Our Mission</h2>
-    <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4></div>
-  </div>
+  <section id="mission">
+    <div class="our-mission"><h2>Our Mission</h2></div>
+    <div class="descriptors"><h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4></div>
+  </section>
                                   <!--tea of the month-->
-  <div class="teas">
+  <section id="featured-teas">
     <h2 class="title">Tea of the Month</h2>
     <h4 class="steeping">What's Steeping at The Tea Cozy</h4>
     <div class="firstrowimg">
-      <img src="./resources/images/img-berryblitz.jpg" class="berry"/>
-      <img src="./resources/images/img-spiced-rum.jpg" class="rum"/>
-      <img src="./resources/images/img-donut.jpg" class="donut"/>
+      <img src="./resources/images/img-berryblitz.jpg" class="berry" alt="a mug of berry tea"/>
+      <img src="./resources/images/img-spiced-rum.jpg" class="rum" alt="a mug of spiced tea"/>
+      <img src="./resources/images/img-donut.jpg" class="donut" alt="a donut"/>
     </div>
     <div class="firstrownames">
       <h4 class="berry">Fall Berry Blitz Tea</h4>
@@ -39,16 +47,16 @@
       <h4 class="donut">Seasonal Donuts</h4>
     </div>
     <div class="secondrowimg">
-      <img src="./resources/images/img-myrtle-ave.jpg" class="myrtle"/>
-      <img src="./resources/images/img-bedford-bizarre.jpg" class="bizarre"/>
+      <img src="./resources/images/img-myrtle-ave.jpg" class="myrtle" alt="a mug of myrtle tea"/>
+      <img src="./resources/images/img-bedford-bizarre.jpg" class="bizarre" ="a mug of bedford tea"/>
     </div>
     <div class="secondrownames">
       <h4 class="myrtle">Myrtle Ave Tea</h4>
       <h4 class="bizarre">Bedford Bizarre Tea</h4>
     </div>
-  </div>
+  </section>
                                   <!--locations-->
-  <div class="locations">
+  <section id="locations">
     <div class="title2"><h2>Locations</h2></div>
     <div class="columns">
                                       <!--Column 1-->
@@ -95,14 +103,14 @@
       <div class="state">Portland, Maine</div>
     </div>
   </div>
-</div>
+</section>
                                  <!--contact info-->
-  <div class="contact">
+  <section class="contact">
     <div class="teacozy"><h2>The Tea Cozy</h2></div>
-    <div class="email"><h5>contact@theteacozy.com</h5>
+    <div class="email"><h5>contact@theteacozy.com</h5></div>
     <div class="phone"><h5>917-555-8904</h5></div>
-  </div>
-  </div>
+  </section>
+</div>
                                  <!--footer-->
     <div class="footer"><h5>copyright The Tea Cozy 2017</h5></div>
   </body>
